RESOLVED FIXED49505
REGRESSION: @font-face doesn't work with small-caps
https://bugs.webkit.org/show_bug.cgi?id=49505
Summary REGRESSION: @font-face doesn't work with small-caps
Dave Hyatt
Reported 2010-11-13 21:19:50 PST
SVG Font support broke small-caps for non-SVG fonts. (Ugh.)
Attachments
Patch (40.58 KB, patch)
2010-11-13 21:24 PST, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2010-11-13 21:24:06 PST
Dave Hyatt
Comment 2 2010-11-13 21:31:56 PST
Fixed in r71979.
Note You need to log in before you can comment on or make changes to this bug.