https://bugs.webkit.org/show_bug.cgi?id=49505

Reviewed by Dan Bernstein.

REGRESSION: @font-face doesn't work with the small-caps variant.  This was broken by the addition of SVG fonts
support long ago.  This patch fixes the SVG code so that it doesn't break non-SVG fonts.

Added fast/blockflow/broken-ideograph-small-caps.html

WebCore:

* css/CSSFontFace.cpp:
(WebCore::CSSFontFace::hasSVGFontFaceSource):
* css/CSSFontFace.h:
* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::getFontData):
* css/CSSFontFaceSource.h:
* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::addFontFaceRule):
(WebCore::CSSFontSelector::getFontData):

LayoutTests:

* fast/blockflow/broken-ideograph-small-caps.html: Added.
* platform/mac/fast/blockflow/broken-ideograph-small-caps-expected.checksum: Added.
* platform/mac/fast/blockflow/broken-ideograph-small-caps-expected.png: Added.
* platform/mac/fast/blockflow/broken-ideograph-small-caps-expected.txt: Added.



Canonical link: https://commits.webkit.org/62450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71979 268f45cc-cd09-0410-ab3c-d52691b4dbfc